// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements SchemaElement given allOf keyword with reference should refract to semantic ApiDOM tree 1`] = `
(SchemaElement
  (MemberElement
    (StringElement)
    (ArrayElement
      (ReferenceElement
        (MemberElement
          (StringElement)
          (StringElement))))))
`;

exports[`refractor elements SchemaElement given anyOf keyword with reference should refract to semantic ApiDOM tree 1`] = `
(SchemaElement
  (MemberElement
    (StringElement)
    (ArrayElement
      (ReferenceElement
        (MemberElement
          (StringElement)
          (StringElement))))))
`;

exports[`refractor elements SchemaElement given definitions keyword with reference should refract to semantic ApiDOM tree 1`] = `
(SchemaElement
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (ReferenceElement
          (MemberElement
            (StringElement)
            (StringElement)))))))
`;

exports[`refractor elements SchemaElement given dependencies keyword with reference should refract to semantic ApiDOM tree 1`] = `
(SchemaElement
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (ReferenceElement
          (MemberElement
            (StringElement)
            (StringElement)))))))
`;

exports[`refractor elements SchemaElement given embedded SchemaElements should refract to semantic ApiDOM tree 1`] = `
(SchemaElement
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (SchemaElement
          (MemberElement
            (StringElement)
            (SchemaElement))))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (SchemaElement
        (MemberElement
          (StringElement)
          (SchemaElement))))))
`;

exports[`refractor elements SchemaElement given items keyword in form of object should refract to semantic ApiDOM tree 1`] = `
(SchemaElement
  (MemberElement
    (StringElement)
    (SchemaElement)))
`;

exports[`refractor elements SchemaElement given oneOf keyword with reference should refract to semantic ApiDOM tree 1`] = `
(SchemaElement
  (MemberElement
    (StringElement)
    (ArrayElement
      (ReferenceElement
        (MemberElement
          (StringElement)
          (StringElement))))))
`;

exports[`refractor elements SchemaElement given patternProperties keyword with reference should refract to semantic ApiDOM tree 1`] = `
(SchemaElement
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (ReferenceElement
          (MemberElement
            (StringElement)
            (StringElement)))))))
`;

exports[`refractor elements SchemaElement given properties keyword with reference should refract to semantic ApiDOM tree 1`] = `
(SchemaElement
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (ReferenceElement
          (MemberElement
            (StringElement)
            (StringElement)))))))
`;

exports[`refractor elements SchemaElement should refract to semantic ApiDOM tree 1`] = `
(SchemaElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (ObjectElement)))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (StringElement)
      (StringElement)))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (SchemaElement))))
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (SchemaElement))))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (SchemaElement))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (NumberElement)
      (StringElement)
      (NullElement)))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (SchemaElement)))
  (MemberElement
    (StringElement)
    (ArrayElement
      (SchemaElement)))
  (MemberElement
    (StringElement)
    (ArrayElement
      (SchemaElement)))
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (SchemaElement))))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (LinkDescriptionElement)))
  (MemberElement
    (StringElement)
    (MediaElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (DiscriminatorElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (XmlElement))
  (MemberElement
    (StringElement)
    (ExternalDocumentationElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (BooleanElement)))
`;
